--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    tools:context=".SignUp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,6 +56,7 @@
         android:maxLines="1"
         android:singleLine="true"
         android:textSize="16sp" />
+
     <EditText
         android:id="@+id/edt_Gender"
         android:layout_width="match_parent"
@@ -167,6 +171,6 @@
         android:textSize="18sp"
         android:textStyle="normal"
         app:cornerRadius="5dp" />
+    </LinearLayout>
+</ScrollView>
 
-
-</LinearLayout>
